# networkD

networkd/: README.md  pyproject.toml
networkd/src/networkd/: __init__.py  networkd.py
networkd/tests/: test_networkd.py
