[tool.poetry]
name = "networkd"
version = "0.1.0"
description = "A package to quickly embed and analyze abstract data types!"
authors = ["Lorenzo Giamartino"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
